[package]
name = "win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"


[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    #"Data_Xml_Dom",
    #"Win32_Security",
    #"Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_EventLog",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
]
